--- a/src/component/homebox/homebox.scss
+++ b/src/component/homebox/homebox.scss
@@ -112,20 +112,20 @@
                     left: -1px;
                 }
             }
-            .item-promotion-tags{
-                font-size: 8px;
-        font-weight: bolder;
-        .tag{
-            position: relative;
-        display: inline-block;
-        padding: 1.92px 6.4px 1.6px;
-        border-radius: 9.6px;
-        color: #d56159;
-        background: #f6ebea;
-        -webkit-box-sizing: border-box;
-        box-sizing: border-box;
-        }
-            }
+        //     .item-promotion-tags{
+        //         font-size: 8px;
+        // font-weight: bolder;
+        // .tag{
+        //     position: relative;
+        // display: inline-block;
+        // padding: 1.92px 6.4px 1.6px;
+        // border-radius: 9.6px;
+        // color: #d56159;
+        // background: #f6ebea;
+        // -webkit-box-sizing: border-box;
+        // box-sizing: border-box;
+        // }
+        //     }
             
         }
     }
@@ -156,7 +156,7 @@
     overflow: hidden;
   
     .item-cover{
-     height: 115.2px;
+    //  height: 115.2px;
         position: relative;
         display: block;
         margin: 0 auto;
