--- a/src/component/detail/detail.scss
+++ b/src/component/detail/detail.scss
@@ -1,3 +1,11 @@
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
 .fix-header-tabbox{
     position: fixed;
     left: 0;
@@ -68,4 +76,334 @@
         }
     }
 }
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    span{
+        font-size: 24px;
+    }
+    li{
+       
+      text-align: center;
+        border: 1px solid #f0f0f0;
+        width: 120px;
+    
+        a{
+            display: block;
+           width: 100%;
+            height: 40px;
+            line-height: 40px;
+            font-size: 16px;
+            font-weight: 700;border-color: #e0e0e0;
+            border-radius:4.57136px;
+            border-radius: 3.2px;   background-image: linear-gradient(#fff,#fcfcfc);    color: #8c8c8c;
+        } .highlight{
+        color: #fff;
+    background: #5f7ed7;
+    background: linear-gradient(#6e98f4,#4b77ee);
+
+    }
+    }
+   
+}
+}
+.section-floor{
+    position: relative;
+    box-shadow: 0 5px 13px rgba(0,0,0,.1);
+    margin-bottom: 6px;
+    background: #fff;background: #fff;
+    width: 100%;
+    .item-titlebox{
+        position: relative;user-select: none;
+        .title-content{
+            padding: 12.8px 14.4px;
+            -webkit-user-select: text;
+            user-select: text;
+            h4{
+                font-size:15.625px;
+                margin-bottom: 8.3333px;
+                color: #333;
+            }
+            p{
+                font-size: 12.5px;
+                color: #7f7f7f;
+                margin-bottom: 8.33333px;
+                line-height: 1.5;
+                display: -webkit-box;
+                -webkit-line-clamp: 3;
+                overflow: hidden;
+            }
+            .price{
+                color: #d44d44;
+    font-size:12.5px;
+    display: inline-block;
+    white-space: nowrap;
+    margin-right:3.2px;
+    font-weight: 700;
+                i{
+                    font-style: normal;
+                    font-size:9.6px;color: #d44d44;
+                }
+                .postage-price{
+                    color: #7f7f7f;
+                    font-size: 12.5px;
+                    position: absolute;
+                    font-weight: 400;
+                    right: 14.4px;
+                    bottom: 14.08px;
+                
+                }
+            }
+            
+        }
+    }
+    .activities-wrapper{
+        position: relative;
+        padding: 16.6667px 18.75px 0 ;
+        border-top: 1px solid #999;
+        .activities-title {
+            font-size: 12.5px;
+            line-height: 1.2;
+            padding: 0 0 13.5417px;
+            color: #999;
+            display: block;
+        }
+        .activities-list{
+            .activities-item {
+                padding-bottom: 13.5417px;
+                display: flex;
+                align-items: center;color: #000000;
+                figure{
+
+                    display: inherit;
+                    margin-right: 6.4px;
+                    .tag.tag-red{
+                        color: #d44d44;
+                        background: #fce9e8;
+                        border-color: #f0bab6;
+                    }
+                    .tag {
+                        overflow: hidden;
+                        display: inline-block;
+                        text-align: center;
+                        padding: 2px 10px;
+                        font-size: 12px;
+                        font-weight: 700;
+                        border-radius: 13px;
+                        color: #7f7f7f;
+                        background: #f7f7f7;
+                        border: 1px solid #d3d3d3;
+                    }
+             
+                }
+                label{
+                    position: relative;
+                    display: block;
+                    font-size: 13.5417px;
+                    word-break: break-all;
+                    line-height: 1;
+                    flex: 2;
+                    .special-num-words {
+                        display: inline-block;
+                        word-break: break-word;
+                    }
+                    a{
+                        i{
+                            display: block;
+                            position: absolute;
+                            right: -10px;
+                            top: 50%;
+                            transform: translateY(-9.6px);
+                            width: 4.8px;
+                            height: 9px;
+                            font-size: 12.5px;
+                            font-style: normal;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .item-box-column{
+        font-style: 20.8333px;
+        padding: 16.6667px 31.25px 12.5px 16.6667px;      
+        position: relative;
+        .arrow{
+            font-style: normal;
+           position: absolute;
+      right: 0;
+      top: 50%;
+           display: block;
+        }
+        h6{
+            font-size: 12.5px;
+            line-height: 1.2;
+            padding: 0 0 6.25px;
+            color: #999;
+        }
+        .item-box{
+            font-size: 14.0625px;
+
+     
+            p{
+                line-height: 1.8;
+                color: #333;
+                display: table;
+                .attr-name{
+                    font-size: 13.5417px;
+                    display: table-cell;
+                    word-break: keep-all;
+                }
+                .attr-value{
+                    display: table-cell;
+                    font-weight: bolder;
+                    font-size: 13.5417px;
+                }
+               
+                
+            }
+           
+        }
+    }
+    .title-header {
+        position: relative;
+        .title-wrapper {
+            position: relative;
+         padding: 0 12.5px;
+        
+            }
+    }
+  .img{
+    display: block;
+    width: 100%;
+      img{
+          width: 100%;
+          border: 0;
+
+      height: 100%;
+            border-style: none;
+        }
+     
+  }
+    h2 {
+        height: 40px;
+        line-height: 40px;
+        font-size: 12.5px;
+        font-weight: 700;
+        color: #666;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .item-box-column {
+        padding: 16.6667px 18.75px 8.33333px;
+        position: relative;
+    ul{
+        overflow: hidden;
+        font-size: 10.4167px;
+        font-weight: 700;
+        color: #333;
+        line-height: 1.5;
+        display: flex;
+        flex-wrap: wrap;
+        li{
+            padding-left:20.8333px;
+    float: left;
+    position: relative;
+    box-sizing: border-box;
+    width: 50%;
+    flex: none;
+    margin-bottom: 4.8px;
+        }
+    }
+    }
+    .container{
+        padding: 18.75px 12.5px 0; background: #fff;
+        .item-wrapper {
+            width: calc(50% - 3.2px);
+            float: left;background: #fff;
+            .product-box-item{
+                .item-img {
+                    display: block;
+                    position: relative;
+                    padding-top: 100%;
+                    border-radius: 3.2px;
+                    img {
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 3.2px;
+                    }
+                    .colorful-tag {
+                        color: #cc3e39;
+                        background: #ffe7e5;
+                        border-color: #f0948d;
+                    }
+                    .colorful-tag {
+                        position: relative;
+                        display: inline-block;
+                        padding: 2.08333px 5.55562px;
+                        font-weight: 700;
+                        border-radius: 9.6px;
+                        z-index: 89;
+                        white-space: nowrap;
+                        border: 1px solid #e6e6e6;
+                        -webkit-transform: scale(1);
+                        transform: scale(1);
+                        -webkit-transform-origin: 0 0;
+                        transform-origin: 0 0;
+                    }
+                   
+                }
+                .item-content {
+                    margin: 0 auto;
+                    padding: 8.33333px 12.5px 18.75px;
+                    h4 {
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        margin: 0;
+                        font-size:12.5px;
+                        color: #333;
+                    }
+                    p {
+                        margin-top: 6.25px;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        font-size: 10.4167px;
+                        line-height: 1.2;
+                        color: #7f7f7f;
+                        min-height: 12.5px;
+                    }
+                    .good-price {
+                        position: relative;
+                        top: -2.4px;
+                        .price {
+                            color: #d44d44;
+                            display: inline-block;
+                            white-space: nowrap;
+                            font-weight: 700;
+                            font-size: 12.5px;
+                             i {
+                                font-style: normal;
+                                font-size: 8px;     color: #d44d44;
+                            }
+                            .origin-price {
+                                color: #7f7f7f;
+                                font-size: 8px;
+                                position: relative;
+                                i {
+                                    color: #7f7f7f;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
