--- a/src/component/shop/shop.scss
+++ b/src/component/shop/shop.scss
@@ -2,8 +2,232 @@
 .big{
     display: flex;
     flex-direction: column;
-
+    //点击按钮
+    .dj{
+        position: absolute;
+        right: 12px;
+        top: 9px;
+        color: #fff;    padding:10.8333px 13.75px 0;
+       font-size: 12px;
+       z-index: 999;background: linear-gradient(#2a2a29,#151515);
+       box-shadow: inset 0 1px 1px hsla(0,0%,100%,.1), inset 0 0 1px rgba(0,0,0,.5);
+    }
+    .section-floor{
+        margin-bottom: 110px;
+    } 
+    .group{
+        margin-bottom: 6px;
+    position: relative;
+    background: #fff;
+    box-shadow: 0 5px 13px rgba(0,0,0,.1);
+    .item {
+        position: relative;    display: flex;
+        height: 114px;
+        align-items: center;
+        .item-wrapper{
+            display: flex;
+            flex: 1;
+            padding: 0 15px 0 0;
+            overflow: hidden;
+            align-items: center;
+         
+            .item-thumb{
+                width: 90px;
+                height: 90px;
+                flex: 0 0 90px;
+                position: relative;
  
+            }
+            .item-info-container {
+                flex: 1;
+                margin-left: 13px;
+                padding: 0 5px 0 0;
+                position: relative;
+                .colorful-tag-container {
+                    max-height: 16px;
+                    .colorful-tag.red {
+                        color: #cc3e39;
+                        background: #ffe7e5;
+                        border-color: #f0948d;
+                    }
+                    .colorful-tag {
+                        position: relative;
+                        display: inline-block;
+                        padding: 2.0833px 5.55562px;
+                        // font-weight: 700;
+                        border-radius: 9.6px;
+                        z-index: 89;
+                        white-space: nowrap;
+                        border: 1px solid #e6e6e6;
+                        transform: scale(1);
+                        transform-origin: 0 0;
+                    }
+                   
+                }
+                .item-info {
+                    margin: 4px 0;
+                    .title {
+                        font-size: 12.5px;
+                        color: #000;
+                    }
+                    .item-attrs{
+                        font-size: 10.4167px;
+                        color: #7f7f7f;
+                        overflow: hidden;
+                        margin: 7px 0;
+                    }
+                    .item-price-container {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        .discount-price {
+                            display: flex;
+                            align-items: center;
+                            .price {
+                                color: #d44d44;
+                                font-size: 12.5px;
+                                font-weight: 700;
+                                position: relative;
+                                top: -4px;
+                                i {   color: #d44d44;
+                                    font-style: normal;
+                                    font-size: 10.4167px;
+                                    display: inline-block;
+                                }
+                                .sum {
+                                    color: #999;
+                                    position: relative;
+                                    padding-left: 14px;
+                                    display: inline-block;    margin-left: 6px;
+                                }
+                            }
+                        }
+                        .quantity-container{
+                            position: relative;
+                            left: -6px;
+                            .quantity {
+                                display: flex;
+                                height: 30px;
+                                width: 100px;
+    justify-content: space-around;
+    .button{
+        width: 20px;
+        height: 20px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+        font-size: 22px;
+        border:1px solid #d6d3d3;
+        border-radius: 50%;
+        color: #d6d3d3;
+    }
+   .disabled{
+        color: #000000;
+    }
+    .num{
+        color: #000000;
+        font-size: 16px;
+    }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .am-checkbox-wrapper{
+          width: 44px;
+            text-align: center;
+            line-height: 0;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+    }
  
+//  结算按钮
+.bottom-bar{
+    position: fixed;
+    height: 54px;
+    padding: 0 12px;
+    bottom: 57px;
+    left: 0;
+    right: 0;
+    z-index: 90;
+    background: #fafafa;
+    box-shadow: 0 -0.2rem 1rem rgba(0,0,0,.1);
+    font-size: 12px;
+    color: #666;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    .select-info {
+     
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        span{
+            color: #999;
+            margin-left: 8px;     i{
+                font-style: normal;
+                font-weight: 900;
+    font-size: 14.58333px;color: #d44d44;
+            }
+        }
+    }
+    .sum-info{
+        margin-right: 120px;
+        font-size: 12px;
+        color: #666666;
+         i {
+            font-style: normal;
+            font-size: 10.4167px;
+        }
+        .delivery {
+            margin-top: 8px;
+        }
+        .total-price {
+            font-weight: 700;
+            color: #333;
+            z-index: 10;
+            position: relative;
+            font-size: 10px;
+       
+            span {
+                color: #d44d44;
+                font-size: 12px;
+            }
+        }
+        .desc{
+            display: block;
+        }
+        .blue-btn{
+            height: 40px;
+            line-height: 40px;
+            box-shadow: inset 0 -1px 1px rgba(0,0,0,.2), 0 0 1px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.2);
+            font-size: 14px;
+            display: block;
+            background: #5e8bdd;
+            background: linear-gradient(#6f94e8,#5178df);
+            border-radius: 6px;
+            text-align: center;
+            text-shadow: 0 -1px 0 rgba(0,0,0,.15);
+            color: #fff;
+            position: absolute;
+    width: 110px;
+    right: 11px;
+    top: 14%;
+        }
+        .btn-disabled{
+            background: linear-gradient(#bfbfbf,#999);
+        }
+        .blue-btn.edit-red {
+            background: #d9554c;
+            background: linear-gradient(#db6962,#d0453d);
+        }
+    }
+}
 
 }
