--- a/src/component/title/title.scss
+++ b/src/component/title/title.scss
@@ -2,7 +2,7 @@
     background: #1d1d1d;
     background-image: linear-gradient(#1d1d1d,#181818);
     height: 50px;
-    line-height: 50px;
+    // line-height: 50px;
     position: fixed;
     top: 0;
     left: 0;
