--- a/src/component/list/list.scss
+++ b/src/component/list/list.scss
@@ -1,5 +1,6 @@
 .overview-content{
     margin-top: 50px;
+    margin-bottom: 60px;
     .box-line {
         position: relative;
         box-sizing: border-box;
