--- a/src/component/user/user.scss
+++ b/src/component/user/user.scss
@@ -1,7 +1,7 @@
 .big{
     
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
     .content{
         width: 100%;
         color: #000000;
